--- a/.github/workflows/Simple-Test-Workflow.yml
+++ b/.github/workflows/Simple-Test-Workflow.yml
@@ -9,6 +9,7 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+    paths: /apis/user-java/
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
