--- a/.github/workflows/Simple-Test-Workflow.yml
+++ b/.github/workflows/Simple-Test-Workflow.yml
@@ -17,14 +17,18 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: apis/user-java
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8 for Shared Runner
+    - name: Set up JDK 11 for Shared Runner
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+        java-version: 11
+        #server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+        #settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
