--- a/.github/workflows/Simple-Test-Workflow.yml
+++ b/.github/workflows/Simple-Test-Workflow.yml
@@ -4,12 +4,20 @@ name: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
+env:
+  webapp_name: test
+  resource_group: openhacka8d3h114rg
+  
+
+
+
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
     paths: /apis/user-java/
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -23,7 +31,10 @@ jobs:
         working-directory: apis/user-java
       
     steps:
-   
+    - name: Azure login
+      uses: Azure/login@v1
+      with:
+       creds: ${{secrets.AZURE_CREDENTIALS }} 
          
     - uses: actions/checkout@v2
     - name: Set up JDK 11 for Shared Runner
@@ -49,6 +60,35 @@ jobs:
        publish-profile:  ${{ secrets.azureWebAppPublishProfile }}
        slot-name: staging
        images: openhacka8d3h114acr.azurecr.io/dtadevops-apis:${{ github.run_number }}
+    
+    
+    - name: Run a test in staging
+      run: |
+       curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' -d '{ 
+         "createdAt":"2018-08-07", 
+         "deleted": false, 
+         "firstName": "Hacker", 
+         "fuelConsumption": 0, 
+         "hardAccelerations": 0, 
+         "hardStops": 0, 
+         "id": "1234", 
+         "lastName": "Test", 
+         "maxSpeed": 0, 
+         "profilePictureUri": "https://pbs.twimg.com/profile_images/1003946090146693122/IdMjh-FQ_bigger.jpg",  
+         "ranking": 0, 
+         "rating": 0, 
+         "totalDistance": 0,  
+         "totalTime": 0, 
+         "totalTrips": 0, 
+         "updatedAt": "2018-08-07", 
+         "userId": "Hacker3" 
+       } 'https://openhacka8d3h114userjava-staging.azurewebsites.net/api/user/1234'
+      
+    #  - name: Swap staging to production
+    #  run: |
+    #   az webapp deployment slot swap --name $webapp_name --resource-group $resource_group --slot staging --target-slot production
+     
+  
     - uses: alialaa/issue-action@v1.0.0
       if: failure()
       with:
