--- a/.github/workflows/Simple-Test-Workflow.yml
+++ b/.github/workflows/Simple-Test-Workflow.yml
@@ -31,10 +31,10 @@ jobs:
         working-directory: apis/user-java
       
     steps:
-    - name: Azure login
-      uses: Azure/login@v1
-      with:
-       creds: ${{secrets.AZURE_CREDENTIALS }} 
+   # - name: Azure login
+    #  uses: Azure/login@v1
+   #   with:
+  #     creds: ${{secrets.AZURE_CREDENTIALS }} 
          
     - uses: actions/checkout@v2
     - name: Set up JDK 11 for Shared Runner
