--- a/.github/workflows/Simple-Test-Workflow.yml
+++ b/.github/workflows/Simple-Test-Workflow.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 env:
-  webapp_name: test
+  webapp_name: openhacka8d3h114userjava
   resource_group: openhacka8d3h114rg
   
 
@@ -31,10 +31,10 @@ jobs:
         working-directory: apis/user-java
       
     steps:
-   # - name: Azure login
-    #  uses: Azure/login@v1
-   #   with:
-  #     creds: ${{secrets.AZURE_CREDENTIALS }} 
+    - name: Azure login
+      uses: Azure/login@v1
+      with:
+       creds: ${{ secrets.AZURE_CREDENTIALS }} 
          
     - uses: actions/checkout@v2
     - name: Set up JDK 11 for Shared Runner
@@ -84,9 +84,9 @@ jobs:
          "userId": "Hacker3" 
        }' 'https://openhacka8d3h114userjava-staging.azurewebsites.net/api/user/1234'
       
-    #  - name: Swap staging to production
-    #  run: |
-    #   az webapp deployment slot swap --name $webapp_name --resource-group $resource_group --slot staging --target-slot production
+    - name: Swap staging to production
+      run: |
+        az webapp deployment slot swap --name $webapp_name --resource-group $resource_group --slot staging --target-slot production
      
   
     - uses: alialaa/issue-action@v1.0.0
